--- a/css/dolphin.css
+++ b/css/dolphin.css
@@ -20,3 +20,9 @@ html {
 
 /* Write your solution here */
 
+@media only screen and (max-width: 1050px) {
+  #dolphin {
+    top: 50px;
+    transform: rotate(0.75turn);
+  }
+}
